# brain-workflow

./: README.md
brain-workflow-core/: README.md  main.py  pyproject.toml
brain-workflow-core/agents/: evaluator.py  executor.py  memory.py  models.py  observer.py  planner.py
fe/: package-lock.json  package.json
fe/app/: globals.css  layout.tsx  page.tsx
fe/app/api/events/: fe.code-workspace  route.ts
fe/components/: EventCard.tsx  ExploreBtn.tsx  LightRays.tsx  NavBar.tsx
fe/lib/: mongodb.ts
